--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-text-transition": "^3.0.2",
+    "socket.io-client": "^4.5.4",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
@@ -48,6 +50,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/react-router": "^5.1.20",
+    "@types/react-scroll-to-bottom": "^4.2.0",
     "@types/styled-components": "^5.1.26"
   }
 }
