--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-text-transition": "^3.0.2",
+    "socket.io-client": "^4.5.4",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
