--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-text-transition": "^3.0.2",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.5.4",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
@@ -49,6 +50,8 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/react-router": "^5.1.20",
-    "@types/styled-components": "^5.1.26"
+    "@types/simple-peer": "^9.11.5",
+    "@types/styled-components": "^5.1.26",
+    "@types/webrtc": "^0.0.33"
   }
 }
