--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-player": "^2.11.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-text-transition": "^3.0.2",
